--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+		 <dependency>
+         		<groupId>junit</groupId>
+         		<artifactId>junit</artifactId>
+         		<version>3.8.1</version>
+      		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
